  Could not do a restart with appending because the checkpoint file was not
  found. Either supply the name of the right checkpoint file or do not use
  -append": mdpow.run.runMD_or_exit() does not anymore add -append to GROMACS
  invocation (#128)
* Configuration setting mdrun.maxthreads now also applies to energy
  minimization with mdpow-equilibrium.py/mdpow.run() (#119)


2017-05-02    0.6.1
orbeckst, iorga, ianmkenney, rhheilma

* works with Gromacs 2016.x, 5.1.x, and 4.6.x (#36)
* removed unused analysis.py and analysis/thermodynamics.py
* supported water models: TIP4P, TIP3P, TIP5P, SPC, SPC/E, and
  new: M24 (modified TIP3P, #46)
* fixed sc-power can only take integer powers (#71)
* use PyBOL for building the testing environment
* removed run.MDrunnerSimple (#60)
* used flexible water model (-DFLEXIBLE) for more robust energy
  minimization
* FEP failed with IndexError when lambdas where presented as a list
  (#78)
* EDR files are now output by default instead of XVG (#75)
* fep.Gsolv.analyze() automatically converts EDR to XVG.bz2 if
  necessary and can process the XVG/MBAR format of Gromacs 5.x
  for TI (issue #82)
* deprecated mdpow-ghyd script (issue #14)


2016-06-29    0.6.0
orbeckst, ianmkenney

Code and development are now public on GitHub https://github.com/Becksteinlab/MDPOW

* supported solvents: water, octanol, cyclohexane (new) (#11, #16)
* supported water models: TIP4P, and new: TIP3P, TIP5P, SPC, SPC/E (#38)
* FEP simulations are now done in NPT (Parrinello-Rahman barostat)
  instead of NVT (#28)
* can run with Gromacs BAR and/or TI
* input file format was changed from ini to YAML (#1, #5, #6)
* additional configuration options in the runinput.yml file (#30, #38)



2011-09-06    0.5.1
orbeckst

Bug fixes and the mdpow-rebuild-simulation script to fix-up the state
files. For details see the git log commit messages.


2011-08-25    0.5.0
orbeckst, iorga

Fully working version with all scripts in place. Was used for the SAMPL3